--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toxi App - Toxicologia Farmacêutica</title>
+    <title> Toxi App - Toxicologia Farmacêutica </title>
     <style>
         * {
             margin: 0;
@@ -604,7 +604,7 @@
             <div class="header-content">
                 <div class="logo">
                     <span class="logo-icon">FFUP</span>
-                    <h1>FFUP Toxi App - Toxicologia Farmacêutica</h1>
+                    <h1>Toxi App - Toxicologia Farmacêutica</h1>
                 </div>
                 <nav>
                     <ul>
@@ -964,7 +964,7 @@
                     </ol>
                 </div>
                 <div class="emergency-contact">
-                    📞 EMERGÊNCIA: 112 ou 800 250 250 (CIAV)
+                    📞 EMERGÊNCIA: 112 ou 800 250 250 (Centro de Informação Antivenenos-CIAV)
                 </div>
                 <div class="ciav-info">
                     <h4>📋 Dados que deverá oferecer ao CIAV:</h4>
